<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/tv_nav_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/tv_nav_events" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/tv_nav_jobs" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/tv_nav_contact_us" />
    </group>

</menu>